Closed
Bug 1687480
Opened 5 years ago
Closed 5 years ago
When expanding or collapsing tree rows, VoiceOver does not speak the new state
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
RESOLVED
FIXED
86 Branch
| Tracking | Status | |
|---|---|---|
| firefox86 | --- | fixed |
People
(Reporter: MarcoZ, Assigned: MarcoZ)
Details
(Whiteboard: [Mac2020_2])
Attachments
(1 file)
STR:
- Focus any tree view.
- Arrow onto a collapsible row.
- Press RightArrow to expand, LeftArrow to collapse.
Expected: VoiceOver should speak the new state.
Actual: VoiceOver is silent.
| Assignee | ||
Comment 1•5 years ago
|
||
Pushed by mzehe@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/103aa530a642
Fire NSAccessibility notifications for expanding and collapsing rows, r=morgan
Comment 3•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•