Bug 1687480 - Fire NSAccessibility notifications for expanding and collapsing rows, r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D102308