accessible/mac/mozTableAccessible.h
@@ -159,4 +159,7 @@
 // override
 - (NSString*)moxLabel;
 
+// override
+- (void)stateChanged:(uint64_t)state isEnabled:(BOOL)enabled;
+
 @end
